# Ai-challenge

./: PM-Application-Methodology.md
.claude/: CLAUDE.md
10-Week-AI-Portfolio-Challenge/: README.md
10-Week-AI-Portfolio-Challenge/deployment-templates/: README.md
10-Week-AI-Portfolio-Challenge/portfolio-showcase/: README.md
10-Week-AI-Portfolio-Challenge/project-00-senior-python-developer/: README.md
10-Week-AI-Portfolio-Challenge/project-00-senior-python-developer/advanced-concepts/: async_programming.py  metaclasses_and_descriptors.py
10-Week-AI-Portfolio-Challenge/project-00-senior-python-developer/architecture-patterns/: solid_principles.py
10-Week-AI-Portfolio-Challenge/project-00-senior-python-developer/documentation/: skill_assessment.md
10-Week-AI-Portfolio-Challenge/shared-resources/: README.md
10-Week-AI-Portfolio-Challenge/week-01/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_local.py  streamlit_app.py
10-Week-AI-Portfolio-Challenge/week-01/src/: config.py  exceptions.py  utils.py
10-Week-AI-Portfolio-Challenge/week-01/src/api/: main.py
10-Week-AI-Portfolio-Challenge/week-01/src/frontend/: app.py
10-Week-AI-Portfolio-Challenge/week-01/src/models/: story_generator.py
10-Week-AI-Portfolio-Challenge/week-01/tests/: test_story_generator.py
10-Week-AI-Portfolio-Challenge/week-02/: README.md
10-Week-AI-Portfolio-Challenge/week-03/: README.md
10-Week-AI-Portfolio-Challenge/week-04/: README.md
10-Week-AI-Portfolio-Challenge/week-05/: README.md
10-Week-AI-Portfolio-Challenge/week-06/: README.md
10-Week-AI-Portfolio-Challenge/week-07/: README.md
10-Week-AI-Portfolio-Challenge/week-08/: README.md
10-Week-AI-Portfolio-Challenge/week-09/: README.md
10-Week-AI-Portfolio-Challenge/week-10/: README.md
Job-Applications/: JD-Matrix-Application-Guide.md  README.md
Job-Applications/Luma-AI/: README.md
Job-Applications/Luma-AI/documents/: Cover_Letter_Luma_AI.md
Job-Applications/Luma-AI/research/: company-analysis.md
Job-Applications/Upwork-Market-Analysis/: HOW-TO-USE-THIS-DATA.md  README.md
Job-Applications/Upwork-Market-Analysis/analysis/opportunities/: portfolio-evolution-plan-updated.md  portfolio-evolution-plan.md
Job-Applications/Upwork-Market-Analysis/analysis/trends/: skill-demand-tracker-updated.json  skill-demand-tracker.json
Job-Applications/Upwork-Market-Analysis/data/raw-jobs/: 2025-07-05-jobs-batch2.json  2025-07-05-jobs-batch3.json  2025-07-05-jobs-batch4.json  2025-07-05-jobs.json
Job-Applications/Upwork-Market-Analysis/data/weekly/: 2025-W27-analysis-updated.md  2025-W27-analysis.md  2025-W27-final-analysis.md
Job-Applications/automation/scripts/: job-analyzer.py
Job-Applications/automation/templates/: job-input-template.json
Job-Applications/data/: job-tracker.json
Luma-AI/documents/: Resume_Mohamed_Khaled_PM.md
Luma-AI/notes/: interview-preparation.md
